<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/words">



    <fragment
        android:id="@+id/words"
        android:name="com.example.learngerman.ui.words.WordsFragment"
        android:label="@string/title_words"
        tools:layout="@layout/fragment_words" />


    <fragment
        android:id="@+id/add_word"
        android:name="com.example.learngerman.ui.addWord.AddWordFragment"
        android:label="@string/title_add_word"
        tools:layout="@layout/fragment_add_word" />


    <fragment
        android:id="@+id/practice"
        android:name="com.example.learngerman.ui.practice.PracticeFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_practice" />
</navigation>