<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.words.WordsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500">

        <SearchView
            android:id="@+id/search_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="@string/search"
            android:background="@color/yellow_700"
            android:layout_margin="16dp"/>
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="6dp"
            android:paddingRight="4dp"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/word_tab_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/blue_200"
                android:padding="3dp"
                android:text="@string/word" />

            <TextView
                android:id="@+id/meaning_tab_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/blue_200"
                android:padding="3dp"
                android:text="@string/meaning" />

            <TextView
                android:id="@+id/error_tab_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/blue_200"
                android:padding="2dp"
                android:text="@string/erros"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/consecutive_tab_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/blue_200"
                android:padding="2dp"
                android:textSize="18sp"
                android:text="@string/type"
                android:textAlignment="center" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/words_list_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:paddingBottom="?attr/actionBarSize"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

            <ProgressBar
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="@{isLoading ? View.VISIBLE : View.INVISIBLE, default = gone}" />


        </FrameLayout>
    </LinearLayout>
</layout>