<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isLoadingExample"
            type="Boolean" />

        <variable
            name="sentence"
            type="String" />

        <variable
            name="keyword"
            type="String" />

        <variable
            name="meaning"
            type="String" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.learn.LearnActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.LearnGerman.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="@string/app_name"
                app:popupTheme="@style/Theme.LearnGerman.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/layout_context_learn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sentence_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sentence"
                android:textSize="22sp"
                android:layout_margin="8dp"
                android:textColor="@color/blue_200"
                android:textStyle="bold"
                android:padding="6dp" />

        <TextView
            android:id="@+id/sentence_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{sentence}"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:padding="6dp" />

            <TextView
                android:id="@+id/keyword_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keyword"
                android:textStyle="bold"
                android:textColor="@color/blue_200"
                android:textSize="22sp"
                android:layout_margin="8dp"
                android:padding="6dp" />

        <TextView
            android:id="@+id/keyword_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@{keyword}"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:padding="6dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/base_noun_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/meaning"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/learn_meaning_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/verify_word_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:backgroundTint="@color/yellow_500"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/verify" />

        <ProgressBar
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="@{isLoadingExample ? View.VISIBLE : View.INVISIBLE, default = gone}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>