<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        tools:context=".ui.addWord.AddWordFragment">

        <TextView
            android:id="@+id/title_choose_type_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/choose_type"
            android:textColor="@color/blue_700"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_word_types"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:entries="@array/word_types"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:id="@+id/add_noun_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:padding="4dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:text="@string/article"
                        android:textSize="17sp" />

                    <Spinner
                        android:id="@+id/spinner_articles"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints="article"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/articles"
                        />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/base_noun_textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/base"
                    android:padding="4dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/base_noun_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/plural_textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/plural"
                    android:padding="4dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/plural_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_verb_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:padding="4dp"
                android:visibility="gone">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/base_verb_textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/base"
                    android:padding="4dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/base_verb_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/perfect_textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/perfect"
                    android:padding="4dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/perfect_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/praeteritum_textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/praeteritum"
                    android:padding="4dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/praeteritum_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_adjective_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:padding="4dp"
                android:visibility="gone">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/base_adjective_textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/base"
                    android:padding="4dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/base_adjective_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/comparative_textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/comparative"
                    android:padding="4dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/comparative_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/superlative_textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/superlative"
                    android:padding="4dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/superlative_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meaning_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/meaning"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meaning_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meaning_accepted_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/meanings_accepted"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meaning_accepted_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/meaning_learned_check_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="@string/meaning_learned" />
            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/creat_word_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/yellow_500"
            android:gravity="center"
            android:layout_margin="8dp"
            android:text="@string/create" />

    </LinearLayout>
</layout>